Change default settings

--- a/minetest.conf
+++ b/minetest.conf
@@ -1,6 +1,23 @@
+# server default config
+enable_pvp = false
+time_speed = 20
+profiler.load = true
+profiler.default_report_format = txt
+mapgen_limit = 1024
+
+# server performance optimization
+chatcommand_msg_time_threshold = 0.035
+chat_message_limit_per_10sec = 5.0
+active_object_send_range_blocks = 4
+active_block_range = 3
+max_block_send_distance = 8
+max_block_generate_distance = 5
+emergequeue_limit_total = 512
+emergequeue_limit_diskonly = 64
+emergequeue_limit_generate = 64
+
 # mtg
 bones_mode = drop
-give_initial_stuff = true
 enable_tnt = false
 enable_fence_tall = true
 enable_fire = false
@@ -34,3 +51,6 @@ mobs_sharks.enable_small = false
 
 # signs_lib
 signs_lib.edit_priv = true
+
+# builtin_item
+builtin_item.items_collect_on_slippery = false
