Change default settings

--- a/minetest.conf
+++ b/minetest.conf
@@ -3,7 +3,6 @@ enable_pvp = false
 time_speed = 20
 profiler.load = true
 profiler.default_report_format = txt
-mapgen_limit = 1024
 
 # server performance optimization
 chatcommand_msg_time_threshold = 0.035
@@ -54,3 +53,73 @@ signs_lib.edit_priv = true
 
 # builtin_item
 builtin_item.items_collect_on_slippery = false
+
+# everness
+everness_feature_skybox = false
+everness_feature_sneak_pickup = false
+everness_baobab_savanna = false
+everness_coral_forest = false
+everness_frosted_icesheet = false
+everness_frosted_icesheet_ocean = false
+everness_frosted_icesheet_under = false
+everness_crystal_forest = false
+everness_crystal_forest_dunes = false
+everness_cursed_lands = false
+everness_cursed_lands_dunes = false
+everness_forsaken_desert = false
+everness_forsaken_desert_ocean = false
+everness_forsaken_tundra = false
+
+# mapgen
+mapgen_limit = 592 # +1 chunk = 80
+mg_biome_np_heat = {
+	flags = defaults
+	lacunarity = 2
+	persistence = 0.5
+	seed = 5349
+	spread = (250,250,250)
+	scale = 50
+	octaves = 3
+	offset = 50
+}
+mg_biome_np_humidity = {
+	flags = defaults
+	lacunarity = 2
+	persistence = 0.5
+	seed = 842
+	spread = (250,250,250)
+	scale = 50
+	octaves = 3
+	offset = 50
+}
+mgv7_np_terrain_persist = {
+	flags = defaults
+	lacunarity = 2
+	persistence = 0.600000024
+	seed = 539
+	spread = (500,500,500)
+	scale = 0.100000001
+	octaves = 3
+	offset = 0.600000024
+}
+mgv7_np_terrain_alt = {
+	flags = defaults
+	lacunarity = 2
+	persistence = 0.600000024
+	seed = 5934
+	spread = (150,150,150)
+	scale = 25
+	octaves = 5
+	offset = 4
+}
+mgv7_cavern_limit = -200
+mgv7_np_cavern = {
+	flags = defaults
+	lacunarity = 2
+	persistence = 0.629999995
+	seed = 723
+	spread = (192,64,192)
+	scale = 1
+	octaves = 5
+	offset = 0
+}
